MASTER: Fix chart overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,10 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: safe center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  overflow: scroll;
 }
 
 .App-link {
@@ -32,6 +33,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
